<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/welc"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    android:layout_margin="10dp"
    android:background="@drawable/main_welcome1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="18dp"
            android:text="@string/Welcome"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:text="@string/Welcome_text" />

        <Button
            android:id="@+id/cont_main"
            android:layout_width="149dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:background="@drawable/polnay_knopka"
            android:text="@string/contin" />

    </LinearLayout>
</LinearLayout>