<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cont1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    android:background="@drawable/fonlvl">


    <LinearLayout
        android:id="@+id/cont2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fail"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/cont3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/resum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/polnay_knopka"
                android:text="@string/resume"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/esc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/polnay_knopka"
                android:text="@string/back_pause"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>