<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/mainfon" />

    <LinearLayout
        android:id="@+id/cont1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cont2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:padding="10dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/cont4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/level1"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/polnay_knopka"
                        android:text="@string/lvl1"
                        android:textSize="30sp"
                        android:textColor="@color/white"/>

                    <Button
                        android:id="@+id/level2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/polnay_knopka"
                        android:text="@string/lvl2"
                        android:textSize="27sp"
                        android:textColor="@color/white"/>


                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/cont3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:background="@drawable/polnay_knopka"
                    android:textSize="24sp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>